# task_tracker

./: .gitignore  README.md  docker-compose.yml
app/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
app/config/: settings.py
app/tracker/: admin.py  forms.py  urls.py  views.py
app/tracker/migrations/: 0001_initial.py  0002_alter_status_options_task.py  0003_alter_queue_key_alter_task_id.py  0004_comment.py  0005_alter_comment_task.py
app/tracker/models/: __init__.py  comment.py  queue.py  status.py  tag.py  task.py
app/tracker/templates/: add_queue.html  add_task.html  index.html  login.html  queue_detail.html  task_detail.html
nginx/: Dockerfile  nginx.conf  site.conf
